--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ backcall                  0.1.0                    py36_0
 blas                      1.0                         mkl  
 bleach                    3.1.0                    py36_0  
 ca-certificates           2019.1.23                     0  
-certifi                   2018.11.29               py36_0  
+certifi                   2019.3.9                 py36_0  
 colorama                  0.4.1                    py36_0  
 cycler                    0.10.0           py36h009560c_0  
 decorator                 4.3.2                    py36_0  
@@ -47,7 +47,7 @@ nbformat                  4.4.0            py36h3a5bc1b_0
 notebook                  5.7.4                    py36_0  
 numpy                     1.11.3          py36h35d8231_12  
 numpy-base                1.11.3          py36hc3f5095_12  
-openssl                   1.1.1a               he774522_0  
+openssl                   1.1.1b               he774522_1  
 pandoc                    2.2.3.2                       0  
 pandocfilters             1.4.2                    py36_1  
 parso                     0.3.2                    py36_0  
@@ -76,6 +76,7 @@ sqlite                    3.26.0               he774522_0
 terminado                 0.8.1                    py36_1  
 testpath                  0.4.2                    py36_0  
 tornado                   5.1.1            py36hfa6e2cd_0  
+tqdm                      4.31.1                   py36_1  
 traitlets                 4.3.2            py36h096827d_0  
 typed-ast                 1.3.1            py36he774522_0  
 vc                        14.1                 h0510ff6_4  
